Bug 549238 [OS/2] build break in nsStopwatch.cpp due to -Werror=return-type. r=asuth,sr=Standard8